src/index.css
@import '@fortawesome/fontawesome-free/css/all.min.css';

body {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(0, 0, 0, 0.87);
  background-color: #eeeeee !important;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


/* NAVBAR */
.navContainer{
  background-color: #eeeeee;
  box-shadow: 0px 15px 10px -15px #6e6e6e; 
  position: sticky;
  top: 0;
  z-index: 1;
}

.logo{
  width: 25%;
  height: auto;
}

.myName{
  font-family: "Bodoni Moda SC", serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-size: 1.5rem;
  font-weight: 500;
  padding: 10px 0;
}

.btn-link{
  text-decoration: none;
  color: black;
  padding-right: 35px;
}

@media (max-width: 860px) {
  .btn-link {
    flex: 1;
    font-size: smaller;
    justify-content: flex-end;
    padding-right: 2px;
  }
}

.btn-link:hover {
  color: #a0a0a0;
}


/* INTRO */
.intro-container{
  animation: fadeIn 2s ease-in-out;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.intro{
  text-align: center;
  margin: 20px;
}

.intro-header{
  font-weight: 200;
  font-size: 1rem;
}

.sample-text{
  font-family: "Fira Sans Extra Condensed", sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.5rem;
}

.responsive-svg {
  width: 70%;
  height: auto;
  max-width: 100%;
}

/* ABOUT */
.about-container{
  margin: 10px;
  padding-top: 50px;
  padding-bottom: 50px;
}

.aboutMePic{
  width: 70%;
  height: auto;
  box-shadow: 0px 15px 10px -15px #6e6e6e; 
}

.about-row {
  display: flex;
  justify-content: center;
  align-items: center; 
}

.about-col {
  text-align: center; 
}

.about-title{
  font-size: 5rem;
  padding-bottom: 20px;
}
.about-text{
  font-size: 1.2rem;
}

/* PROJECTS */
.project-container{
  padding: 10rem 0 10rem 0;
  margin: 25px 0;
  background-color: white;
}

.project-title{
  padding-left: 50px;
  padding-bottom: 20px;
  font-weight: 300;
  font-size: 60px;
}

.span{
  font-style: italic;
  font-weight: 700;
}

.card-link {
  text-decoration: none; 
  display: block;
}

.project-card {
  position: relative;
  overflow: hidden;
  transition: transform 0.3s ease-in-out;
  box-shadow: 10px 15px 10px -15px #6e6e6e; 
}

.project-card:hover {
  transform: scale(1.05);
}

.project-image {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: 1;
  filter: grayscale(80%);
}

.project-card:hover .project-image {
  display: block; 
  opacity: 1;
}

.project-card .card-body {
  z-index: 2;
  background-color: #c7c5be; 
  color: white;
  transition: background-color 0.3s ease-in-out;
}

.hr{
  border: 1px solid #f7f7f7; 
}



/* RESUME */
.resume-container{
  width: 100%;
  padding: 10rem 0 10rem 0;
}

.res{
  width: 90%;
  height: auto;
  padding-left: 10px;
  padding-top: 10px;
  box-shadow: 0px 15px 10px -15px #6e6e6e; 
}
.skill-container{
  padding: 20px;
}
.skills{
  font-weight: 300;
  font-size: 75px;
  padding: 10px;
}

.vertical-hr {
  border-left: 1px solid #d8d8d8;
  height: 650px; 
  margin: 20px 0px; 
}
.temp{
  padding-top: 95px;
}

.skill-pic{
  width: 100%;
  height: auto;
  padding-top: 25px;
 }

 .res-btn{
  margin: 0px 55px;
 }

 .vertical-text {
  writing-mode: horizontal-tb;
  text-orientation: upright; 
  transform: rotate(90deg); 
  transform-origin: center 45%  ;
  font-weight: 600;
  font-size: 145px;
  color: #a0a0a057;
  font-family: Georgia, Times, 'Times New Roman', serif;
  text-shadow:2px 2px 5px #f2f2f2;
}

 /* CONTACT */
 .form-container{
  width: 100%;
  padding: 10rem 0 10rem 0;
  border-top: #82827c solid;
 }

 .contact-pic{
  width: 40%;
  box-shadow: 0px 15px 10px -15px #6e6e6e; 
 }

.form-btn{
  background-color: #585853;
  border:#585853;
}

.form-btn:hover{
  background-color: #6f7969;
  border:#585853;
}

 .icon-container{
  display: flex;
  justify-content: space-evenly;
  align-items: start;
 }

 .icon{
  color: #585853;
  transition: color 0.90 ease;
  padding: 35px 0px;
  
 }

 .icon:hover {
  color: #6f7969;
}



/* FOOTER */
.footer-container{
  background-color: #c7c5be;
}

.icon-footer{
  color: #585853;
  padding: 45px 15px 10px 0px;
 }

